src/main/grammar/armv7/ARMv7.bnf
{
    parserClass = "io.github.asmflow.assembly.armv7.parser.ARMv7Parser"
    parserUtilClass = "io.github.asmflow.assembly.armv7.parser.ARMv7ParserUtil"

    extends = "com.intellij.extapi.psi.ASTWrapperPsiElement"

    elementTypeClass = "io.github.asmflow.assembly.armv7.psi.ARMv7ElementType"
    elementTypeHolderClass = "io.github.asmflow.assembly.armv7.psi.ARMv7TokenTypes"

    psiClassPrefix = "ARMv7"
    psiPackage = "io.github.asmflow.assembly.armv7.psi"
    psiImplClassSuffix = "Impl"
    psiImplPackage = "io.github.asmflow.assembly.armv7.psi.impl"

    tokenTypeClass = "io.github.asmflow.assembly.armv7.psi.ARMv7TokenType"

    classHeader = "header.txt"

    tokens = [
        COMMENT = "comment"
        IDENTIFIER = "identifier"
        LINE_FEED = "lf"
        STRING = "string"

        // numbers
        BINARY_NUMBER = "binary number"
        DECIMAL_NUMBER = "decimal number"
        HEXADECIMAL_NUMBER = "hexadecimal number"
        OCTAL_NUMBER = "octal number"

        // registers
        REG = "register"

        // symbols
        BANG = "!"
        COMMA = ","
        COLON = ":"
        DOT = "."
        EQUAL = "="
        LBRACE = "{"
        LBRACKET = "["
        MINUS = "-"
        PLUS = "+"
        POUND = "#"
        RBRACE = "}"
        RBRACKET = "]"
    ]
}

File ::= Item*
private Item ::= (LabelWithColon | Instruction | Directive) LINE_FEED | LINE_FEED

Register ::= REG {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7RegisterMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7RegisterMixin"
}
RegisterRange ::= Register MINUS Register {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7RegisterRangeMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7RegisterRangeMixin"
}

RegisterList ::= LBRACE RegisterListItems RBRACE {
  pin = 1
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7RegisterListOperandMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
}
private RegisterListItems ::= RegisterListItem (COMMA RegisterListItem)*
private RegisterListItem ::= RegisterRange | Register

Directive ::= DOT DirectiveName DirectiveParameterList? {
  pin = 2
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7DirectiveMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7DirectiveMixin"
}
DirectiveName ::= IDENTIFIER
DirectiveParameterList ::= Parameter (COMMA Parameter)*
Parameter ::= Label | Number | StringLiteral

Instruction ::= Mnemonic Operands? {
  pin = 1
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7InstructionMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7InstructionMixin"
}
Operands ::= Operand (COMMA Operand)*
Operand ::= RegisterList | RegisterOperand | Label | Number | LiteralLoad {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7OperandMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
}

LiteralLoad ::= EQUAL NumberLiteral {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7LiteralLoadOperandMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
}

private RegisterOperand ::= Postindexed
  | Preindexed
  | RegisterWithWriteback
  | RegisterWithShift

RegisterWithWriteback ::= Register BANG {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7RegisterWithWritebackOperandMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
}

Postindexed ::= LBRACKET Register RBRACKET COMMA FlexibleOffset {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7PostindexedOperandMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
}
Preindexed ::= LBRACKET Register (COMMA FlexibleOffset)? RBRACKET BANG? {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7PreindexedOperandMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
}

FlexibleOffset ::= Number | Sign? RegisterWithShift {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7FlexibleOffsetMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7FlexibleOffsetMixin"
}

RegisterWithShift ::= Register (COMMA Shift)? {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7RegisterWithShiftOperandMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
}
Shift ::= ShiftType (Number | Register) {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7ShiftMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7ShiftMixin"
}

Mnemonic ::= IDENTIFIER

ShiftType ::= IDENTIFIER {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7ShiftTypeMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7ShiftTypeMixin"
}

LabelWithColon ::= Label COLON
Label ::= IDENTIFIER

Sign ::= PLUS | MINUS {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7SignMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7SignMixin"
}
Number ::= POUND Sign? NumberLiteral {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7NumberOperandMixinImpl"
  implements = [
    "io.github.asmflow.assembly.armv7.psi.ARMv7NumberMixin"
    "io.github.asmflow.assembly.armv7.psi.ARMv7OperandMixin"
  ]
}
private NumberLiteral ::= !<<afterWhitespace>> (BinaryLiteral | DecimalLiteral | HexadecimalLiteral | OctalLiteral)

BinaryLiteral ::= BINARY_NUMBER {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7BinaryNumberMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7NumberMixin"
}
DecimalLiteral ::= DECIMAL_NUMBER {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7DecimalNumberMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7NumberMixin"
}
HexadecimalLiteral ::= HEXADECIMAL_NUMBER {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7HexadecimalNumberMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7NumberMixin"
}
OctalLiteral ::= OCTAL_NUMBER {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7OctalNumberMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7NumberMixin"
}

StringLiteral ::= STRING {
  mixin = "io.github.asmflow.assembly.armv7.psi.impl.ARMv7StringLiteralMixinImpl"
  implements = "io.github.asmflow.assembly.armv7.psi.ARMv7StringLiteralMixin"
}
